<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backround"
    tools:context=".fragment.HomeFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_1"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_1"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:background="@color/white"
            >



            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="170dp"
                android:text="@string/home"
                android:textColor="@color/text_home_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="18sp"
                android:layout_marginTop="48dp"
                />

            <TextView
                android:id="@+id/tv_next_challenge"
                android:layout_width="0dp"
                android:layout_height="24dp"
                app:layout_constraintTop_toBottomOf="@id/tv_home"
                android:text="@string/next_challenge"
                android:textColor="@color/text_home_color"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="18sp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="30dp"
                />

            <TextView
                android:id="@+id/tv_see_all"
                android:layout_width="0dp"
                android:layout_height="24dp"
                app:layout_constraintTop_toBottomOf="@id/tv_home"
                android:text="@string/see_all"
                android:textSize="14sp"
                android:textColor="@color/text_home_color"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintStart_toEndOf="@id/tv_home"
                android:layout_marginStart="100dp"
                android:layout_marginTop="30dp"
                />


            <LinearLayout
                android:id="@+id/linear_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_next_challenge"
                android:background="@color/white"
                android:layout_marginTop="18dp"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/img_fitness_home_fragment"
                    app:shapeAppearanceOverlay="@style/roundImage"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_body_pump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/linear_1"
                android:text="@string/body_pump"
                app:layout_constraintStart_toStartOf="@id/linear_1"
                android:layout_marginTop="18dp"
                android:layout_marginStart="150dp"
                android:textColor="@color/text_home_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                />

            <ImageView
                android:id="@+id/img_icon_kcal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_body_pump"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="114dp"
                android:src="@drawable/ic_booked"
                android:layout_marginTop="12dp"
                />

            <TextView
                android:id="@+id/tv_kcal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_400_kcal"
                app:layout_constraintStart_toEndOf="@id/img_icon_kcal"
                app:layout_constraintTop_toBottomOf="@id/tv_body_pump"
                android:layout_marginTop="14dp"
                android:textColor="@color/grey"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="8dp"/>


            <ImageView
                android:id="@+id/img_icon_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_body_pump"
                app:layout_constraintStart_toEndOf="@id/tv_kcal"
                android:src="@drawable/ic_time"
                android:layout_marginTop="16dp"
                android:layout_marginStart="30dp"

                />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_45_min"
                app:layout_constraintStart_toEndOf="@id/img_icon_time"
                app:layout_constraintTop_toBottomOf="@id/tv_body_pump"
                android:layout_marginTop="14dp"
                android:textColor="@color/grey"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="8dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_next_classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextclasses"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textColor="@color/text_home_color"
        app:layout_constraintTop_toBottomOf="@id/card_view_1"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginStart="14dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="480dp"
        android:layout_marginHorizontal="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/item_home"/>

</androidx.constraintlayout.widget.ConstraintLayout>