<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backround"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >


            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_back"
                android:layout_marginStart="10dp"
                android:layout_marginTop="32dp"
                />

            <ImageView
                android:id="@+id/img_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tv_details"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_notification"

                android:layout_marginStart="120dp"
                android:layout_marginTop="32dp"
                />

            <TextView
                android:id="@+id/tv_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="176dp"
                android:text="@string/details"
                android:textColor="@color/text_home_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="18sp"
                android:layout_marginTop="48dp"
                />


            <LinearLayout
                android:id="@+id/linear_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_details"
                android:background="@color/white"
                android:layout_marginTop="18dp"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/img_spinning"
                    app:shapeAppearanceOverlay="@style/roundImage" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_name_exs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/linear_1"
                android:text="@string/spinning"
                app:layout_constraintStart_toStartOf="@id/linear_1"
                android:layout_marginTop="30dp"
                android:layout_marginStart="14dp"
                android:textColor="@color/text_home_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                />

            <ImageView
                android:id="@+id/img_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_name_exs"
                app:layout_constraintStart_toStartOf="@id/tv_name_exs"
                android:src="@drawable/location"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tv_location_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/img_location"
                app:layout_constraintTop_toTopOf="@id/img_location"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                android:text="@string/barselona_spain"/>


            <ImageView
                android:id="@+id/img_icon_kcal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_name_exs"
                app:layout_constraintStart_toEndOf="@id/tv_location_country"
                android:src="@drawable/ic_booked"
                android:layout_marginStart="64dp"
                android:layout_marginTop="6dp"
                />

            <TextView
                android:id="@+id/tv_low_energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_energy"
                app:layout_constraintStart_toEndOf="@id/img_icon_kcal"
                app:layout_constraintTop_toBottomOf="@id/tv_name_exs"
                android:layout_marginTop="8dp"
                android:textColor="@color/grey"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="8dp"/>


            <ImageView
                android:id="@+id/img_icon_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_name_exs"
                app:layout_constraintStart_toEndOf="@id/tv_low_energy"
                android:src="@drawable/ic_time"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"

                />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_45_min"
                app:layout_constraintStart_toEndOf="@id/img_icon_time"
                app:layout_constraintTop_toBottomOf="@id/tv_name_exs"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textColor="@color/grey"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="8dp"/>


            <TextView
                android:id="@+id/tv_detals_text_1"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/img_location"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:text="@string/sed_ut_perspiciatis_unde_omnis_iste_natus_error_sit_voluptatem_accusantium_doloremque_laudantium_totam_rem_aperiam_eaque_ipsa_quae_ab_illo_inventore_veritatis_et_quasi_architecto_beatae_vitae_dicta_sunt_explicabo_nemo_enim_ipsam_voluptatem_quia_voluptas_sit_aspernatur"
                android:textSize="10sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/grey"
                android:layout_marginStart="12dp"/>

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_detals_text_1"
                android:textColor="@color/text_home_color"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_name_exs"
                android:text="@string/about_spinning"
                android:layout_marginTop="20dp"/>


            <LinearLayout

                android:id="@+id/line_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_about"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_detals_text_2"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sed_ut_perspiciatis_unde_omnis_iste_natus_error_sit_voluptatem_accusantium_doloremque_laudantium_totam_rem_aperiam_eaque_ipsa_quae_ab_illo_inventore_veritatis_et_quasi_architecto_beatae_vitae_dicta_sunt_explicabo_nemo_enim_ipsam_voluptatem_quia_voluptas_sit_aspernatur"
                    android:textSize="10sp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/grey"

                    />

                <TextView
                    android:id="@+id/readMoreTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_more"
                    android:textSize="16sp"
                    android:textColor="@color/bottom_color"
                    android:visibility="visible"
                    android:layout_marginStart="12dp"
                     />
            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_book_now"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/bottom_color"
        android:text="@string/book_now"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_1" />


</androidx.constraintlayout.widget.ConstraintLayout>