<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="156dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <ImageView
                android:id="@+id/img"
                android:layout_width="400dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_fitness_home_fragment"
                />


            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cardCornerRadius="8dp">


                <TextView
                    android:id="@+id/tv_text_body_pump"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_pump"
                    android:textSize="12sp"
                    android:textColor="@color/grey"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:id="@+id/tv_week_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/week_day"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="28dp"/>

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_20_min"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="50dp"/>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="52dp"
                android:layout_height="20dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/bottom_color"
                app:cardCornerRadius="6dp">

                <TextView
                    android:id="@+id/tv_energy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low"
                    android:textSize="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    />


            </androidx.cardview.widget.CardView>




        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>