<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backround"
    android:orientation="vertical"
    tools:context=".fragment.BookNowFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_back"
            android:layout_gravity="start"
            android:layout_marginStart="14dp"
            android:layout_marginTop="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_now"
            android:textColor="@color/text_home_color"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_regular"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:layout_marginHorizontal="8dp"
            />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/shape_linear"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/text_home_color"
            android:textColorHint="@color/text_home_color"
            android:layout_marginHorizontal="12dp"
            android:hint="@string/your_name"
           />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/your_email"
            android:textColor="@color/text_home_color"
            android:textColorHint="@color/text_home_color"
            android:gravity="center"
            android:background="@drawable/shape_linear"
            android:inputType="textEmailAddress"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="12dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ntb_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:text="@string/book_now"

            app:cornerRadius="12dp"
            android:backgroundTint="@color/bottom_color"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</LinearLayout>